# uav-optimisation-research

./: .gitignore  README.md  actual_RL.py  analysis.py  analysis2.py  asd.py  battery_strategies_graphs.py  check.py  debugging_and_testing.py  env_runner.py  file_utils.py  generate_saved_states.py  generate_specific_graphs.py  generate_standard_graphs.py  helper_functions.py  logger_setup.py  main.py  meow.py  merge_results.py  parallel.py  project.avi  pyproject.toml  random_tests.py  setup.py  single_run.py  test.txt  test_correctness.py
UAV_RL_env/: __init__.py
UAV_RL_env.egg-info/: PKG-INFO  SOURCES.txt
conf/: run_conf.json
generate graphs for results/: battery_strategies_graphs.py  generate_specific_graphs.py  generate_standard_graphs.py  graphs.py
generate_graphs_for_results/: battery_strategies_graphs.py  generate_standard_graphs.py
notebooks/: analyse.ipynb  data_manipulation.ipynb  meow.ipynb  results.csv  updated_results.csv
old_saved_states/: saved_state_200_1.txt  saved_state_200_5.txt  saved_state_500_4.txt  saved_state_50_6.txt
results/: Results Analysis.xlsx  Test_Amjed.xlsx  result.txt  result_closest_package_first.txt  result_closest_package_first_1000_3.txt  result_closest_package_first_200_3.txt  result_farthest_package_first.txt  result_farthest_package_first_1000_3.txt  result_farthest_package_first_200_3.txt  result_farthest_package_first_MPA_1000_3.txt  result_farthest_package_first_MPA_200_3.txt  result_most_packages_first.txt  result_most_packages_first_1000_3.txt  result_most_packages_first_200_3.txt  result_multiple_packages.txt  (+11 more)
(+156 files in other folders)
