[project]
name = "uav-optimisation-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "ty>=0.0.1a25",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
